# vestige

./: .gitignore  Anchor.toml  Cargo.toml  README.md  TESTING.md  convert_slides.py  package-lock.json  package.json  vestige-pitch.html  vestige-pitch.pptx
docs/: README.md
frontend/: README.md  constants.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  types.ts
frontend/app/allocation/: page.tsx
frontend/app/creator/: page.tsx
frontend/app/discover/: page.tsx
frontend/app/launch-detail/: page.tsx
frontend/components/: BottomTabs.tsx  CreateInvertedLaunchForm.tsx  CreateLaunchForm.tsx  DedupedWalletModal.tsx  InvertedLaunchDetail.tsx  MagicBlockControls.tsx  Sidebar.tsx  StatusPanel.tsx  VestigeLogo.tsx  WalletButton.tsx
frontend/lib/: index.ts  magicblock-client.ts  use-vestige.ts  vestige-client.ts  vestige.json  wallet-provider.tsx
frontend/public/: manifest.json
mobile/: .env.example  .pnp.cjs  App.android.tsx  App.tsx  README.md  app.json  eas.json  index.ts  metro.config.js  package-lock.json  package.json  sim_graduate.cjs
mobile/patches/: react-native+0.81.5.patch
mobile/src/components/: AppSplash.tsx  BackgroundEffect.tsx  BuyPanel.tsx  CandlestickChart.tsx  CommentThread.tsx  CompactStatRow.tsx  HolderDistribution.tsx  KingOfTheHill.tsx  LaunchCard.tsx  PositionCard.tsx  PriceCurveChart.tsx  PriceLineChart.tsx  ProgressBar.tsx  SkeletonLoader.tsx  StatBox.tsx  TradeFeed.tsx  TradePanel.tsx  VestigeLogo.tsx  VestigeLogoSVG.tsx  WalletButton.tsx
mobile/src/constants/: solana.ts  theme.ts
mobile/src/lib/: polyfills.ts  supabase.ts  use-comments.ts  use-favorites.ts  use-trade-candles.ts  use-vestige.ts  use-wallet-mwa.tsx  use-wallet-privy.tsx  use-wallet.android.tsx  use-wallet.tsx  vestige-client.ts  vestige-transactions.ts  vestige.json
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: CreateLaunchScreen.tsx  DiscoverScreen.tsx  LandingScreen.tsx  LaunchDetailScreen.tsx  (+2 more)
programs/vestige/: Cargo.toml
programs/vestige/src/: lib.rs
scripts/: fix-lockfile.sh
tests/: inverted-launch.ts  test-private-commit.ts  vestige.ts
