[package]
name = "vestige"
version = "0.1.0"
description = "Inverted bonding curve token launchpad with immediate delivery and graduation bonus"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vestige"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
borsh = "0.10"
